--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<html>
+<html >
     <head>
         <title>HTML Site Demo</title>
+        <link rel="stylesheet" href="./assets/styles/style.css">
     </head>
     <body>  
         <h1>Hola mundo</h1>
