--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="./assets/styles/style.css">
     </head>
     <body>  
-        <h1>Hola mundo</h1>
+        <h1 id="greeting">Hola mundo</h1>
         <p>Bienvenido a mi primer aplicación</p> 
         <p>esta pagina contiene: </p> 
         <ul>
@@ -13,7 +13,7 @@
             <li>CSS</li>
             <li>JavaScript</li>
         </ul>
-        <button>Dime tu nombre</button>
+        <button onclick="changeGreeting()">Dime tu nombre</button>
         <script src="./assets/js/index.js"></script>
     </body>
 </html>
